--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="BGqhEYMoM97t1XA_3HhOEScg8IQlrtSyqTP2MjjJlRs" />
   <meta name="google-site-verification" content="LcjMUOGn9nAyWkzJkuWxQqhnVDrlbXBGIIkJAAe73Lo" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
