--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
     <p>Every part should be trail-tested and designed specifically for Jeep YJs—this is why sourcing quality <a href="https://mountainoffroad.com/collections/wrangler-yj" target="_blank" rel="noopener noreferrer">jeep yj parts</a> from experts matters. <strong>mountainoffroad.com</strong> offers a wide selection dedicated to your rig to help you build with confidence.</p>
 
-    <h2>A Personal Note on "Khoti Ky Buchy Y"</h2>
+    <h2>Celebrate the Offroad Spirit</h2>
 
-    <p>In offroad culture, some terms and sayings become part of the community’s humor and identity. The phrase <strong>"khoti ky buchy y"</strong> is one such colorful expression that captures the fearless spirit many Jeepers share—brave, relentless, and ready for any challenge. It reminds us that while our rides can get banged up, the journey and camaraderie are what truly matter.</p>
+    <p>In offroad culture, expressions and nicknames often become part of the lifestyle, reflecting the fearless, resilient mindset of the community. It’s a lifestyle that celebrates bold choices, mechanical skill, and the thrill of the journey, even when the trail gets tough.</p>
 
     <h2>Why MountainOffroad.com is the Go-To Source</h2>
 
